@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-04-09 03:03:45 asaim Exp $
+$Id: History,v 1.3 1999-04-15 08:41:40 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Apr 15, 99 M.Asai (tag event-01-00-02)
+- Catch up the changes of trajectory classes in tracking category.
 
 Apr 09, 99 M.Asai (tag event-01-00-01)
 - Change the pointer arguments in user action classes to const.
